--- a/app/styles.css
+++ b/app/styles.css
@@ -1,16 +1,24 @@
-.body {
-  display: flex;
-  max-height: fit-content;
-  max-width: fit-content;
+html {
+  height: 100%;
+}
+
+body {
+  min-height: 100%;
+  width: 100%;
+  margin: 0%;
 }
 
 .header {
   background-color: #1f2937;
   display: flex;
-  max-height: 24px;
-  max-width: fit-content;
+  height: 100px;
+  max-width: 100%;
+  margin: 0px;
+  justify-content: center;
 }
-.logo {
+h1 {
+  font-size: 24px;
+  color: #f9faf8;
 }
 .links {
   display: flex;
@@ -23,4 +31,12 @@
 .info {
 }
 .quote {
+}
+
+footer {
+  background-color: #1f2937;
+  display: flex;
+  height: 75px;
+  max-width: 100%;
+  justify-content: end;
 }
