--- a/app/styles.css
+++ b/app/styles.css
@@ -20,21 +20,41 @@ h1 {
   font-size: 24px;
   color: #f9faf8;
 }
+.logo {
+  display: flex;
+  width: 40%;
+}
 .links {
   display: flex;
   align-items: flex-end;
   justify-content: space-between;
+  margin: 40px;
+}
+button {
+  background: none;
+  margin-left: 25px;
+  color: #e5e7eb;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  font-size: 18px;
 }
 .main {
-  background-color: #1f2937;
+  background-color: #067a29;
+  height: 400px;
 }
 .info {
+  background-color: #f9faf8;
+  height: 400px;
 }
 .quote {
+  background-color: #e5e7eb;
+  height: 400px;
+  font-family: light italic;
 }
 
 footer {
-  background-color: #1f2937;
+  background-color: #371f32;
   display: flex;
   height: 75px;
   max-width: 100%;
