--- a/app/styles.css
+++ b/app/styles.css
@@ -20,9 +20,30 @@ h1 {
   font-size: 24px;
   color: #f9faf8;
 }
+.main {
+  justify-items: center;
+  align-items: center;
+}
+.mainTitle {
+  font-size: 48px;
+  color: #f9faf8;
+  font-weight: extra-bold;
+}
+.mainSignup {
+  color: #f9faf8;
+  background: #3882f6;
+  padding: 10px 30px;
+  border-radius: 8px;
+}
+.mainSubtext {
+  font-size: 18px;
+  color: #e5e7eb;
+}
+
 .logo {
   display: flex;
   width: 40%;
+  padding: 20px;
 }
 .links {
   display: flex;
@@ -42,6 +63,7 @@ button {
 .main {
   background-color: #067a29;
   height: 400px;
+  padding: 40px;
 }
 .info {
   background-color: #f9faf8;
