--- a/app/styles.css
+++ b/app/styles.css
@@ -20,9 +20,18 @@ h1 {
   font-size: 24px;
   color: #f9faf8;
 }
+
 .main {
-  justify-items: center;
-  align-items: center;
+  background-color: #067a29;
+  height: 400px;
+  padding: 40px;
+  justify-content: center;
+}
+
+.mainText {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 .mainTitle {
   font-size: 48px;
@@ -38,6 +47,7 @@ h1 {
 .mainSubtext {
   font-size: 18px;
   color: #e5e7eb;
+  margin-top: -20px;
 }
 
 .logo {
@@ -60,10 +70,11 @@ button {
   cursor: pointer;
   font-size: 18px;
 }
-.main {
-  background-color: #067a29;
-  height: 400px;
-  padding: 40px;
+
+.mainPlaceholder {
+  height: 200px;
+  width: 400px;
+  background-color: #e5e7eb;
 }
 .info {
   background-color: #f9faf8;
