--- a/app/styles.css
+++ b/app/styles.css
@@ -22,6 +22,7 @@ h1 {
 }
 
 .main {
+  display: flex;
   background-color: #067a29;
   height: 400px;
   padding: 40px;
@@ -32,6 +33,7 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  width: 50%;
 }
 .mainTitle {
   font-size: 48px;
@@ -48,6 +50,11 @@ h1 {
   font-size: 18px;
   color: #e5e7eb;
   margin-top: -20px;
+}
+.mainPlaceholder {
+  height: 200px;
+  width: 400px;
+  background-color: #e5e7eb;
 }
 
 .logo {
@@ -71,11 +78,6 @@ button {
   font-size: 18px;
 }
 
-.mainPlaceholder {
-  height: 200px;
-  width: 400px;
-  background-color: #e5e7eb;
-}
 .info {
   background-color: #f9faf8;
   height: 400px;
