--- a/app/styles.css
+++ b/app/styles.css
@@ -16,16 +16,16 @@ body {
   margin: 0px;
   justify-content: center;
 }
-h1 {
+.logoText {
   font-size: 24px;
   color: #f9faf8;
 }
 
 .main {
   display: flex;
-  background-color: #067a29;
+  background-color: #1f2937;
   height: 400px;
-  padding: 40px;
+  padding-top: 40px;
   justify-content: center;
 }
 
@@ -33,7 +33,6 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  width: 50%;
 }
 .mainTitle {
   font-size: 48px;
@@ -52,15 +51,22 @@ h1 {
   margin-top: -20px;
 }
 .mainPlaceholder {
-  height: 200px;
-  width: 400px;
-  background-color: #e5e7eb;
+  display: flex;
+  justify-content: center;
+  height: 250px;
+  width: 520px;
+  background-color: #bbb7b7;
+  margin-left: 50px;
+}
+.placeholderText {
+  color: #e5e7eb;
+  margin-top: 120px;
 }
 
 .logo {
   display: flex;
-  width: 40%;
   padding: 20px;
+  margin-right: 300px;
 }
 .links {
   display: flex;
